--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,32 +22,28 @@
             android:id="@+id/signup_first_name"
             style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
-            android:hint="@string/hint_first_name"
-            android:paddingStart="@dimen/dp_20" />
+            android:hint="@string/hint_first_name" />
 
         <EditText
             android:id="@+id/signup_last_name"
             style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_last_name"
-            android:paddingStart="@dimen/dp_20" />
+            android:hint="@string/hint_last_name" />
 
         <EditText
             android:id="@+id/signup_email"
             style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_email"
-            android:paddingStart="@dimen/dp_20" />
+            android:hint="@string/hint_email" />
 
         <EditText
             android:id="@+id/signup_password"
             style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_password"
-            android:paddingStart="@dimen/dp_20" />
+            android:hint="@string/hint_password" />
 
     </LinearLayout>
 
