--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,5 +32,6 @@
         <item name="android:layout_height">@dimen/dp_46</item>
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:textSize">@dimen/sp_18</item>
+        <item name="android:paddingStart">@dimen/dp_20</item>
     </style>
 </resources>
