--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,29 @@
         <item name="android:layout_height">@dimen/dp_46</item>
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:textSize">@dimen/sp_18</item>
-        <item name="android:paddingStart">@dimen/dp_20</item>
+        <item name="android:paddingHorizontal">@dimen/dp_20</item>
     </style>
+
+    <style name="NavigationButtonStyle">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+    </style>
+
+    <style name="TitleNoteStyle">
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MessageNoteStyle">
+        <item name="android:textSize">@dimen/sp_18</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+
+    <style name="DateNoteStyle">
+        <item name="android:textSize">@dimen/sp_18</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+
 </resources>
