--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,13 @@
         <item name="android:textSize">@dimen/sp_40</item>
     </style>
 
+    <style name="CheckBoxTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/red_hat_display</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+    </style>
+
     <style name="EditFieldStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp_46</item>
