--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/main">
 
-    <TextView
-        style="@style/TitleMainStyle"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="@dimen/dp_200"
-        android:text="@string/title_spiice" />
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="@dimen/dp_60"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/main_button"
-            style="@style/ButtonMainStyle"
-            android:layout_gravity="center|bottom"
-            android:text="@string/text_main_button" />
-
-
-        <TextView
-            android:id="@+id/main_query"
-            style="@style/TextQueryClickStyle"
-            android:layout_gravity="center|top"
-            android:layout_margin="@dimen/dp_40"
-            android:text="@string/account_login_query" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
