--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        style="@style/TitleStyle"
         android:layout_gravity="center|top"
         android:layout_marginTop="@dimen/dp_100"
-        android:text="@string/title_login" />
+        android:text="@string/title_login"
+        style="@style/TitleStyle"/>
 
     <LinearLayout
         android:layout_width="@dimen/dp_320"
@@ -20,16 +20,16 @@
 
         <EditText
             android:id="@+id/login_email"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
-            android:hint="@string/hint_email" />
+            android:hint="@string/hint_email"
+            style="@style/EditFieldStyle"/>
 
         <EditText
             android:id="@+id/login_password"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_password" />
+            android:hint="@string/hint_password"
+            style="@style/EditFieldStyle"/>
 
     </LinearLayout>
 
@@ -42,17 +42,17 @@
 
         <Button
             android:id="@+id/login_button"
-            style="@style/ButtonMainStyle"
+            android:text="@string/text_login_button"
             android:layout_gravity="center|bottom"
-            android:text="@string/text_login_button" />
+            style="@style/ButtonMainStyle"/>
 
 
         <TextView
             android:id="@+id/login_query"
-            style="@style/TextQueryClickStyle"
-            android:layout_gravity="center|top"
             android:layout_margin="@dimen/dp_40"
-            android:text="@string/return_to_signup_query" />
+            android:layout_gravity="center|top"
+            android:text="@string/return_to_signup_query"
+            style="@style/TextQueryClickStyle"/>
 
     </LinearLayout>
 
