--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        style="@style/TitleStyle"
         android:layout_gravity="center|top"
         android:layout_marginTop="@dimen/dp_100"
-        android:text="@string/title_signup" />
+        android:text="@string/title_signup"
+        style="@style/TitleStyle" />
 
     <LinearLayout
         android:layout_width="@dimen/dp_320"
@@ -20,30 +20,30 @@
 
         <EditText
             android:id="@+id/signup_first_name"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
-            android:hint="@string/hint_first_name" />
+            android:hint="@string/hint_first_name"
+            style="@style/EditFieldStyle" />
 
         <EditText
             android:id="@+id/signup_last_name"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_last_name" />
+            android:hint="@string/hint_last_name"
+            style="@style/EditFieldStyle"/>
 
         <EditText
             android:id="@+id/signup_email"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_email" />
+            android:hint="@string/hint_email"
+            style="@style/EditFieldStyle"/>
 
         <EditText
             android:id="@+id/signup_password"
-            style="@style/EditFieldStyle"
             android:layout_gravity="center|top"
             android:layout_marginTop="@dimen/dp_20"
-            android:hint="@string/hint_password" />
+            android:hint="@string/hint_password"
+            style="@style/EditFieldStyle"/>
 
     </LinearLayout>
 
@@ -56,17 +56,17 @@
 
         <Button
             android:id="@+id/signup_button"
-            style="@style/ButtonMainStyle"
+            android:text="@string/text_signup_button"
             android:layout_gravity="center|bottom"
-            android:text="@string/text_signup_button" />
+            style="@style/ButtonMainStyle" />
 
 
         <TextView
             android:id="@+id/signup_query"
-            style="@style/TextQueryClickStyle"
-            android:layout_gravity="center|top"
             android:layout_margin="@dimen/dp_40"
-            android:text="@string/account_login_query" />
+            android:layout_gravity="center|top"
+            android:text="@string/account_login_query"
+            style="@style/TextQueryClickStyle" />
 
     </LinearLayout>
 
