--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dp_520">520dp</dimen>
+    <dimen name="dp_500">500dp</dimen>
     <dimen name="dp_320">320dp</dimen>
     <dimen name="dp_300">300dp</dimen>
     <dimen name="dp_200">200dp</dimen>
@@ -10,6 +12,7 @@
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_40">40dp</dimen>
+    <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_16">16dp</dimen>
