--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="dp_168">168dp</dimen>
     <dimen name="dp_172">172dp</dimen>
     <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_46">46dp</dimen>
     <dimen name="dp_40">40dp</dimen>
